# battery-ml-benchmark

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: full_benchmark.yaml  quick.yaml  soc_experiment.yaml  soh_experiment.yaml
data/: README.md
data/public/: README.md
docs/: architecture.md  full-benchmark-results.md  leakage-prevention.md  methodology.md  model-card.md  public-data-adapter.md  results.md  resume-summary.md
notebooks/: ml_benchmark_walkthrough.ipynb
results/: experiment_manifest.json  robustness_metrics.csv  soc_metrics.csv  soh_metrics.csv
results/full/: experiment_manifest.json  robustness_metrics.csv  runtime_metrics.csv  soc_metrics_by_seed.csv  soc_metrics_summary.csv  soh_metrics_by_seed.csv  soh_metrics_summary.csv
scripts/: evaluate_models.py  generate_report.py  generate_synthetic_data.py  train_soc_models.py  train_soh_models.py
src/battery_ml/: __init__.py  config.py  data_loading.py  evaluation.py  experiment.py  features.py  metrics.py  preprocessing.py  reporting.py  robustness.py  simulation.py  splits.py  windowing.py
src/battery_ml/baselines/: __init__.py  coulomb_counting.py  ekf.py  ocv_lookup.py
src/battery_ml/models/: __init__.py  gradient_boosting.py  gru.py  linear.py  mlp.py  narx.py  random_forest.py  (+2 more)
tests/: test_baselines.py  test_features.py  test_full_benchmark.py  test_metrics.py  test_models.py  test_no_leakage.py  test_quick_pipeline.py  test_reproducibility.py  test_robustness.py  test_scripts.py  test_simulation.py  test_splits.py  test_windowing.py
